<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/primaryBackground"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Warung"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kripto."
            android:textSize="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create new account"
            android:textSize="24dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/regisEditTextFullname"
            android:padding="10dp"
            android:background="@drawable/auth_form"
            android:textColor="@color/light"
            android:textColorHint="@color/light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/register_fullname"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/regisEditTextUsername"
            android:padding="10dp"
            android:background="@drawable/auth_form"
            android:textColor="@color/light"
            android:textColorHint="@color/light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_username_edittext"
            android:fontFamily="@font/montserrat"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/regisEditTextEmail"
            android:padding="10dp"
            android:background="@drawable/auth_form"
            android:textColor="@color/light"
            android:textColorHint="@color/light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/montserrat"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/regisEditTextAddress"
            android:padding="10dp"
            android:background="@drawable/auth_form"
            android:textColor="@color/light"
            android:textColorHint="@color/light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/register_address"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/regisEditTextPassword"
            android:padding="10dp"
            android:background="@drawable/auth_form"
            android:textColor="@color/light"
            android:textColorHint="@color/light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_password"
            android:fontFamily="@font/montserrat"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/regisEditTextConfirmPassword"
            android:padding="10dp"
            android:background="@drawable/auth_form"
            android:textColor="@color/light"
            android:textColorHint="@color/light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirm_password"
            android:fontFamily="@font/montserrat"
            android:layout_marginBottom="10dp"/>


        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/auth_button"
            android:text="Sign Up"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginRight="5dp"/>

    </LinearLayout>




</LinearLayout>