<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@drawable/gradient_background">

        <TextView
            android:id="@+id/profile_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/profile_textview"
            android:textAlignment="center"
            android:textSize="24dp" />

        <ImageView
            android:id="@+id/edit_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_above="@id/profile_image"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_edit_24" />

        <ImageView
            android:id="@+id/signout_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_above="@id/profile_image"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            app:tint="@color/downtrend"
            android:src="@drawable/ic_baseline_exit_to_app_24" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/profile_textview"
            app:civ_border_width="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:civ_border_color="#FFFFFF"/>


        <TextView
            android:id="@+id/full_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="21dp"
            android:text="@string/full_name_textview" />

        <TextView
            android:id="@+id/username_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/full_name_textview"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white"
            android:text="@string/login_username_edittext" />

        <TextView
            android:id="@+id/username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_info"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/login_username_edittext" />

        <View
            android:id="@+id/username_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/username_textview"
            android:layout_marginBottom="16dp"
            android:background="#696969"/>

        <TextView
            android:id="@+id/email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_line"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white"
            android:text="@string/login_email" />

        <TextView
            android:id="@+id/email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_info"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/login_email" />

        <View
            android:id="@+id/email_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/email_textview"
            android:layout_marginBottom="16dp"
            android:background="#696969"/>

        <TextView
            android:id="@+id/address_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_line"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white"
            android:text="@string/register_address" />

        <TextView
            android:id="@+id/address_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_info"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/register_address" />

        <View
            android:id="@+id/address_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/address_textview"
            android:layout_marginBottom="16dp"
            android:background="#696969"/>


    </RelativeLayout>

</FrameLayout>