<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".WalletActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/buyCryptoHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp"
        app:cardBackgroundColor="@color/gradientBackground"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="16dp">

        <TextView
            android:id="@+id/txtViewCrypto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Buy Bitcoin"
            android:textSize="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/buyCryptoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buyCryptoHeader"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp"
        app:cardBackgroundColor="@color/gradientBackground"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:contentPadding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/priceBuyCrypto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/priceLabel"
                    android:fontFamily="@font/montserrat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/price_textview"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/txtViewPrice"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5340.00"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/quantityBuyCrypto"
                android:layout_below="@id/priceBuyCrypto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quantityTextView"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quantity_textview"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/white"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:id="@+id/btnDecrease"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/baseline_remove_24"
                        app:tint="@color/white" />

                    <EditText
                        android:id="@+id/editTextQuantity"
                        android:fontFamily="@font/montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:inputType="number"
                        android:textColor="@color/white"
                        android:text="0"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"/>

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:id="@+id/btnIncrease"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_baseline_add_24"
                        app:tint="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/creditLayout"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/quantityBuyCrypto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/creditLabel"
                    android:fontFamily="@font/montserrat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/current_balance_textview"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/buyBalance"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1000023.00"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/totalLayout"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/creditLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalPriceLabel"
                    android:fontFamily="@font/montserrat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_textview"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/totalPrice"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="100.00"
                    android:textStyle="bold"
                    android:textSize="23dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:paddingBottom="20dp"
        android:orientation="horizontal">

            <Button
            android:id="@+id/btnBuyCrypto"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_button"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/buy_button"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold" />
    </LinearLayout>

</RelativeLayout>